--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -118,12 +118,20 @@
      <None Include="Assets\Assets1\Shaders\CutPlane.shader" />
      <None Include="Assets\ShaderDemo\Shader06\Shader005.shader" />
      <None Include="Assets\ShaderDemo\Shader05\NewSurfaceShader.shader" />
+     <None Include="Assets\ShaderDemo\Shader08\Shader\Shader0807.shader" />
      <None Include="Assets\ShaderDemo\Shader08\Shader\Shader0804.shader" />
      <None Include="Assets\ShaderDemo\Shader08\Shader\Shader0803.shader" />
      <None Include="Assets\ShaderDemo\Shader07\Shader\Shader0708.shader" />
+     <None Include="Assets\ShaderDemo\Shader08\Shader\Shader0806.shader" />
      <None Include="Assets\ShaderDemo\Shader06\Shader003.shader" />
      <None Include="Assets\ShaderDemo\Shader05\Shader04.shader" />
      <None Include="Assets\ShaderDemo\Shader05\Shader03.shader" />
+ <Reference Include="Unity.PackageManagerUI.Editor">
+ <HintPath>/Users/damon/Documents/GitHub/ShaderDemo/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.AssetBundleBrowser.Editor">
+ <HintPath>/Users/damon/Documents/GitHub/ShaderDemo/Library/ScriptAssemblies/Unity.AssetBundleBrowser.Editor.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
  </Reference>
